修复构建问题